# Smart-Pointers

./: CMakeLists.txt  README.md  build.sh  clean.sh  main.cpp  run.sh
include/: ft_memory.h
include/helper/: ft_make_unique.h
include/smart_ptr/: ft_unique_ptr.h
unique_ptr/: unique_ptr.h
